# codehash

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/codehash/: __init__.py
tests/: test_hashing.py
